feat: implement chat feature for customers and sellers; add WebSocket support, update security configuration, and create necessary database tables